# app-common-python

./: .gitignore  README.md  pyproject.toml  schema.json  setup.cfg  sync_config.sh  test.json
.github/workflows/: package.yml
app_common_python/: __init__.py  types.py
tests/: test_config.py
