[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100

[metadata]
name = app-common-python
url = https://github.com/RedHatInsights/app-common-python
author_email = psavage@redhat.com
long_description = file:README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = app_common_python
